@@ -7,6 +7,15 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2024 JAN 17b
+  * in model/chem/_NH3_Plasma_10s/rodriguez2023.c
+    - deleted find_Te_from_EoverN_NH3() and find_EoverN_from_Te_NH3()
+    - now calls _EoverN_from_rhok_Te() to find Estar 
+  * in model/thermo/_generic/electronimpact.c
+    - changed the parameters in _EoverN_from_rhok_Te() and _Te_from_Nk_EoverN() so that N is replaced
+      by rhok
+    
+
 2024 JAN 17a
   * in model/chem/_NH3_Plasma_10s/doc/rodriguez2023.tex
     - improved the documentation
